# mjswan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  publish-npm.yml  publish-pypi.yml
assets/: config.json  index-C-XdfGyI.css  index-UoLE53G7.js  index-lo9xXHFJ.js
assets/mujoco/: mujoco.js  mujoco_wasm.js
docs/docs/: index.md
docs/docs/api/: core.md
docs/docs/getting-started/: core-concepts.md  examples.md
examples/colab/: anymal_c_velocity.ipynb
examples/demo/: main.py  musclemimic.py  splat.py
examples/demo/assets/anymal_c_velocity/: Mjlab-Velocity-Flat-Anymal-C.3000.json  Mjlab-Velocity-Flat-Anymal-C.3000.onnx
examples/demo/assets/unitree_g1/: balance.json  balance.onnx  g1.xml  g1_with_hands.xml  locomotion.json  locomotion.onnx  scene.xml
examples/demo/assets/unitree_go1/: decap.json  go1.xml  himloco.json
examples/mjlab/: defaults.py
main/assets/g1/: balance.json  locomotion.json
main/assets/go1/: decap.json  himloco.json  scene.mjz
main/assets/go2/: facet.json  robust.json  vanilla.json
menagerie/: index.html
menagerie/assets/a1/: scene.mjz
menagerie/assets/ability_hand/: scene.mjz
menagerie/assets/aero_hand_open/: scene.mjz
menagerie/assets/aliengo/: scene.mjz
menagerie/assets/allegro_hand/: scene.mjz
menagerie/assets/anymal_c_velocity/: velocity_3000_iters.json
menagerie/assets/arx_l5/: scene.mjz
menagerie/assets/booster_t1/: scene.mjz
menagerie/assets/cassie/: scene.mjz
menagerie/assets/cf2/: scene.mjz
menagerie/assets/dynamixel_2r/: scene.mjz
menagerie/assets/gen3/: scene.mjz
menagerie/assets/go1/: scene.mjz
menagerie/assets/iiwa14/: scene.mjz
menagerie/assets/jvrc/: scene.mjz
menagerie/assets/leap_hand/: scene.mjz
menagerie/assets/low_cost_robot_arm/: scene.mjz
menagerie/assets/mujoco_humanoid/: scene.mjz
menagerie/assets/robotiq_2f85/: scene.mjz
menagerie/assets/robotiq_2f85_v4/: scene.mjz
menagerie/assets/rsk/: scene.mjz
menagerie/assets/shadow_dexee/: scene.mjz
menagerie/assets/shadow_hand/: scene.mjz
menagerie/assets/skydio_x2/: scene.mjz
menagerie/assets/so_arm100/: scene.mjz
menagerie/assets/talos/: scene.mjz
menagerie/assets/tiago++/: scene.mjz
menagerie/assets/viper/: scene.mjz
menagerie/assets/widow/: scene.mjz
menagerie/assets/xarm7/: scene.mjz
menagerie/assets/yam/: scene.mjz
menagerie/assets/z1/: scene.mjz
myosuite/: index.html
myosuite/assets/mc23_chase_tag/: scene.mjz
myosuite/assets/mc25_soccer/: scene.mjz
playground/assets/acrobotswingup/: scene.mjz
playground/assets/aerocuberotatezaxis/: scene.mjz
playground/assets/ballincup/: scene.mjz
playground/assets/barkourjoystick/: scene.mjz
playground/assets/cartpolebalance/: scene.mjz
playground/assets/cartpoleswingup/: scene.mjz
playground/assets/cheetahrun/: scene.mjz
playground/assets/fingerspin/: scene.mjz
playground/assets/fingerturneasy/: scene.mjz
playground/assets/fishswim/: scene.mjz
playground/assets/go1footstand/: scene.mjz
playground/assets/go1getup/: scene.mjz
playground/assets/go1joystickflatterrain/: scene.mjz
playground/assets/hopperhop/: scene.mjz
playground/assets/hopperstand/: scene.mjz
playground/assets/humanoidrun/: scene.mjz
playground/assets/humanoidstand/: scene.mjz
playground/assets/humanoidwalk/: scene.mjz
playground/assets/leapcubereorient/: scene.mjz
playground/assets/leapcuberotatezaxis/: scene.mjz
playground/assets/op3joystick/: scene.mjz
playground/assets/pendulumswingup/: scene.mjz
playground/assets/pointmass/: scene.mjz
playground/assets/reachereasy/: scene.mjz
playground/assets/reacherhard/: scene.mjz
playground/assets/swimmerswimmer6/: scene.mjz
playground/assets/t1joystickflatterrain/: scene.mjz
playground/assets/walkerrun/: scene.mjz
playground/assets/walkerstand/: scene.mjz
playground/assets/walkerwalk/: scene.mjz
public/: config.json
public/examples/scenes/: files.json
scripts/: sync_contributors.py
src/mjswan/: __init__.py  _build_client.py  _cli.py  builder.py  project.py  scene.py  splat.py
src/mjswan/template/: package-lock.json  package.json  vite.config.ts
src/mujoco_wasm/examples/: main.js  mujocoUtils.js
src/muwanx/template/: package-lock.json  package.json  vite.config.ts
src/views/: Demo.vue
tests/: conftest.py  test_builder.py  test_demo_models.py  test_splat.py
(+29 files in other folders)
